# commonground-api-common

./: .bumpversion.cfg  .git-blame-ignore-revs  .readthedocs.yml  CHANGELOG.rst  CONTRIBUTING.md  README.rst  package-lock.json  pyproject.toml  pyright.pyproject.toml  ruff.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml  code_quality.yml
docs/: conf.py  index.rst  quickstart.rst
docs/docs_helpers/: index.rst  uml_images.rst
docs/ref/: exception_handlers.rst  index.rst  notitie.rst  settings.rst
notifications_webhook/: __init__.py
testapp/: factories.py  models.py  serializers.py  settings.py  urls.py  viewsets.py
testapp/migrations/: 0010_alter_fkmodel_name.py  0011_notitie.py  0012_medewerker.py  0013_fkmodel_attribute1_fkmodel_attribute2.py
tests/: test_choices.py  test_error_format.py  test_exception_camelize.py  test_exception_handler.py  test_fields.py  test_gegevensgroepen.py  test_jwt_decoding.py  test_notes.py  test_serializer_fields.py  test_utils.py  test_validators.py  test_views.py
tests/utils/: error_views.py
vng_api_common/: apps.py  checks.py  choices.py  client.py  compat.py  constants.py  decorators.py  descriptors.py  exception_handling.py  fields.py  filters.py  filters_backend.py  geo.py  middleware.py  mocks.py  models.py  oas.py  pagination.py  permissions.py  polymorphism.py  routers.py  schema.py  scopes.py  search.py  serializers.py  settings.py  utils.py  validators.py  views.py  viewsets.py
vng_api_common/api/: permissions.py  serializers.py  views.py
vng_api_common/audittrails/: models.py  utils.py  viewsets.py
vng_api_common/audittrails/api/: serializers.py
vng_api_common/authorizations/: middleware.py  models.py  serializers.py  validators.py
vng_api_common/authorizations/migrations/: 0001_initial.py  0004_auto_20190503_0941.py  0006_auto_20190506_0901.py  0008_auto_20190712_1541.py  0016_remove_authorizationsconfig_api_root_and_more.py  0018_alter_autorisatie_max_vertrouwelijkheidaanduiding.py  0018_autorisatie__max_vertrouwelijkheidaanduiding.py  0019_auto_20250325_1044.py
vng_api_common/caching/: decorators.py  etags.py  introspection.py  registry.py  signals.py
vng_api_common/conf/: api.py
vng_api_common/contrib/setup_configuration/: models.py
vng_api_common/diagrams/: generate_graphs.py  uml_images.py
vng_api_common/extensions/: file.py
vng_api_common/locale/nl/LC_MESSAGES/: django.mo  django.po
vng_api_common/migrations/: 0006_applicatie_authorizationsconfig_autorisatie.py  0006_delete_apicredential.py
vng_api_common/notes/: models.py
vng_api_common/notes/api/: serializers.py  viewsets.py
vng_api_common/notifications/: handlers.py
vng_api_common/notifications/api/: views.py
vng_api_common/tests/: __init__.py  auth.py  caching.py  schema.py  urls.py  utils.py
